# wallpaper_changer

./: .gitignore  Cargo.toml  README.md  TODO.txt  build_from_source.sh  build_uninstall.sh  dev_copy_binary_to_release_folder.bat  dev_copy_binary_to_release_folder.sh  release_install.sh  source_code_install.sh
app_runner/: Cargo.toml
app_runner/src/: main.rs
src/: api.rs  help_information.rs  main.rs  style.css  window.ui
src/background/: mod.rs
src/download/: image.rs  mod.rs
src/file_manager/: mod.rs  windows.rs
src/file_manager/linux/: gnome.rs
src/models/: mod.rs  wall_haven_models.rs  wallhaven.rs
src/utils/: flags.rs  mod.rs  os.rs
src/wallpaper/: linux.rs  mod.rs  windows.rs
wallpaper_app/: pubspec.yaml
wallpaper_app/lib/: main.dart
wallpaper_app/lib/models/: collections_response.dart  search_response.dart
