[package]
name = "wallpaper_changer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140" # if you want to use async
ureq = { version = "3.0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }